<resources>
    <string name="app_name">Wetfish</string>
    <string name="tv_action_settings">Settings</string>
    <string name="tv_toolbar_subheader">The Best Internet On the Internet</string>
    <string name="tv_title_activity_gallery_view_pager">GalleryViewPagerActivity</string>
    <string name="tv_title_activity_gallery_upload">Wetfish File Sharing</string>
    <string name="tv_title_upload">Upload File</string>
    <string name="tv_title_edit_exif">Edit EXIF</string>
    <string name="tv_title_edit_file">Edit File</string>
    <string name="tv_under_construction">Feature Under Construction</string>
    <string name="tv_title_activity_gallery_detail">Gallery Item Details</string>
    <string name="tv_title">Title</string>
    <string name="tv_tags">Tags</string>
    <string name="tv_description">Description</string>
    <string name="tv_image_resolution">%1$d x %2$d</string>
    <string name="tv_image_sizez_kb">%d kb</string>
    <string name="tv_file_size_mb">%.2f mb</string>
    <string name="tv_error_loading_db">Error Loading Database</string>
    <string name="tv_no_results">No Files Uploaded…</string>
    <string name="et_description_hint">Description</string>
    <string name="et_tags_hint">Tags</string>
    <string name="et_title_hint">Title</string>
    <string name="fab_select_file">Select File</string>
    <string name="fab_take_video">Capture Video</string>
    <string name="fab_take_picture">Capture Image</string>
    <string name="sb_url_clipboard_success">URL successfully copied to clipboard</string>
    <string name="sb_url_clipboard_failure">URL unsuccessfully copied to clipboard</string>
    <string name="sb_image_successfully_rescaled">Image successfully rescaled</string>
    <string name="sb_image_unsuccessfully_rescaled">Image unsuccessfully rescaled</string>
    <string name="sb_image_unsuccessfully_deleted">Image was unsuccessfully deleted</string>
    <string name="sb_not_representable_by_glide">The given file is currently unsupported. Please view at Wetfish.</string>
    <string name="sb_network_not_connected">Currently unconnected to a network.</string>
    <string name="sb_no_app_available">No app installed can interact with this file.</string>
    <string name="sb_unable_to_obtain_file">Unable to obtain chosen file.</string>
    <string name="sb_no_file_selected">No file selected.</string>
    <string name="tv_cloud_upload_complete">Upload Complete!</string>
    <string name="cb_exif_remove_data">Remove Data</string>
  <string name="tv_cloud_upload_cancelled">Upload Cancelled</string>
    <string name="sb_permission_storage_rationale">Storage permission needed to upload file to Wetfish.</string>
    <string name="permission_not_granted_storage">Uploading to Wetfish requires Storage permissions.</string>
    <string name="ok">OK</string>
    <string name="not_implemented">N/A</string>
    <string name="gallery_detail_uri_key">net.wetfish.wetfish</string>
    <string name="file_details_key">fileDetailsKey</string>
    <string name="file_position_key">filePositionKey</string>
    <string name="wetfish_base_url">https://wiki.wetfish.net/</string>
    <string name="wetfish_base_uploader_url">https://wiki.wetfish.net/uploader/</string>
    <string name="wetfish_base_upload_url">https://wiki.wetfish.net/upload/</string>
    <string name="select_upload_file">Select File</string>
    <string name="capture_upload_file">Capture File</string>
    <string name="image_file_start">CAPTURED_FILE_</string>
    <string name="image_file_extension">.jpg</string>
    <string name="video_file_extension">.mp4</string>
    <string name="file_mime_type">image/*, video/*</string>
    <string name="image_mime_type">image/*</string>
    <string name="video_mime_type">video/*</string>
    <string name="fab_file_upload">Upload File</string>
    <string name="fab_copy_to_clipboard">Copy Upload Link</string>
    <string name="fab_choose_file">Choose New File</string>
    <string name="file_not_found">File Wasn\'t Found</string>
    <string name="btn_refresh">Refresh</string>
    <string name="fab_visit_upload_link">Visit Upload Link</string>
    <string name="fab_copy_upload_link">Copy Upload Link</string>
    <string name="fab_visit_deletion_link">Visit Deletion Link</string>
    <string name="fab_copy_deletion_link">Copy Deletion Link</string>
    <string name="file_provider_authority">net.wetfish.wetfish.fileprovider</string>
    <string name="fab_view_original">View Original</string>
    <string name="tv_video_length_below_ten_seconds">%1$d:0%2$d</string>
    <string name="tv_video_length_above_ten_seconds">%1$d:%2$d</string>
    <string name="fragment_transfer_original_file">originalImageFileUri</string>
    <string name="fragment_transfer_rescaled_file">rescaledImageFileUri</string>
    <string name="fragment_transfer_exif_edited_file">editedExifImageFileUri</string>
    <string name="fragment_transfer_image_edited_file">editedVisualImageFileUri</string>
    <string name="fragment_transfer_video_edited_file">videoFileUri</string>
    <string name="pref_file_name">net.wetfish.wetfish.PREFERENCE_FILE_KEY</string>
    <string name="pref_header_general">General</string>
    <string name="pref_key_sorting_settings">pref_key_sorting_settings</string>
    <string name="pref_category_title_sorting">Sorting</string>
    <string name="pref_sortByMostRecent_key">pref_key_sort_by_most_recent</string>
    <string name="pref_sortByMostRecent_summary">Sort gallery by most recent uploads?</string>
    <string name="pref_sortByMostRecent_title">Most Recent</string>
    <string name="pref_sortingMethod_title">Sorting Method</string>
    <string name="pref_sortingMethod_key">pref_sortingMethod_key</string>
    <string name="pref_header_about">About</string>
    <string name="pref_key_app_information">pref_key_app_information</string>
    <string name="pref_category_app_information">App Information</string>
    <string name="pref_appVersion_key">pref_appVersion_key</string>
    <string name="pref_appVersion_title">Wetfish Version</string>
    <string name="pref_appVersionSummary_key">pref_appVersionSummary_key</string>
    <string name="pref_appVersionSummary_title">Version Summary</string>
    <string name="pref_appVersionSummary">
    <b>Hotfix Time!</b>\n\n<b>Gallery</b>\nFAM now properly responds to a click outside of the FAM menu when it is expanded.\n\n<b>Gallery Item Detail Pages</b>\nSnackbars now properly populate the page when retrieving the uploaded file\'s url and no longer crash the app.\n\n<b>Uploading EXIF Data Pictures</b>\nTaking, sharing, or selecting photos with EXIF data no longer crash the app, however
    some sharing bugs may still remain.</string>
    <string name="pref_appVersionSummary_prompt">Click here for Wetfish version details</string>
    <string name="dialog_acknowledged">Okay</string>
    <string name="pref_appOpenSourceLibraries_key">pref_AppOpenSourceLibraries_Key</string>
    <string name="pref_appOpenSourceLibraries_title">Open Source Libraries</string>
    <string name="pref_appOpenSourceLibraries_prompt">Click here for Wetfish Open Source Library details</string>
    <string name="custom_license_title">Open Source Libraries</string>
    <string-array name="pref_sortingMethod_list_titles">
        <item>null</item>
        <item>null</item>
        <item>null</item>
    </string-array>
    <string-array name="pref_sortingMethod_list_values">
        <item>null</item>
        <item>null</item>
        <item>null</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string-array name="upload_fragment_spinner_array">
        <item>Resolution: Original</item>
        <item>Resolution: Large</item>
        <item>Resolution: Medium</item>
        <item>Resolution: Small</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="tv_title_activity_gallery_detail_view_pager">Gallery</string>
    <string name="exif_data_header_sensitive">Sensitive Exif Data</string>
    <string name="exif_data_header_general">General Exif Data</string>
    <string name="exif_orientation">Orientation</string>
    <string name="exif_tag_f_number">F Number</string>
    <string name="exif_tag_aperture">Aperture</string>
    <string name="exif_tag_aperture_value">Aperture Value</string>
    <string name="exif_tag_artist">Artist</string>
    <string name="exif_tag_bits_per_sample">Bits Per Sample</string>
    <string name="exif_tag_brightness_value">Brightness Value</string>
    <string name="exif_tag_cfa_pattern">CFA Pattern</string>
    <string name="exif_tag_color_space">Color Space</string>
    <string name="exif_tag_components_configuration">Components Configuration</string>
    <string name="exif_tag_compressed_bits_per_pixel">Compressed Bits Per Pixel</string>
    <string name="exif_tag_compression">Compression</string>
    <string name="exif_tag_contrast">Contrast</string>
    <string name="exif_tag_copyright">Copyright</string>
    <string name="exif_tag_custom_rendered">Custom Rendered</string>
    <string name="exif_tag_datetime">Datetime</string>
    <string name="exif_tag_datetime_digitized">Dateime Digitized</string>
    <string name="exif_tag_datetime_original">Datetime Original</string>
    <string name="exif_tag_default_crop_size">Default Crop Size</string>
    <string name="exif_tag_device_setting_description">Device Setting Description</string>
    <string name="exif_tag_digital_zoom_ratio">Digital Zoom Ratio</string>
    <string name="exif_tag_dng_version">DNG Version</string>
    <string name="exif_tag_exif_version">EXIF Version</string>
    <string name="exif_tag_exposure_bias_value">Exposure Bias Value</string>
    <string name="exif_tag_exposure_index">Exposure Index</string>
    <string name="exif_tag_exposure_mode">Exposure Mode</string>
    <string name="exif_tag_exposure_program">Exposure Program</string>
    <string name="exif_tag_exposure_time">Exposure Time</string>
    <string name="exif_tag_file_source">File Source</string>
    <string name="exif_tag_flash">Flash</string>
    <string name="exif_tag_flashpix_version">Flashpix Version</string>
    <string name="exif_tag_flash_energy">Flash Energy</string>
    <string name="exif_tag_focal_length">Focal Length</string>
    <string name="exif_tag_focal_length_in_35mm_film">Focal Length in 35MM Film</string>
    <string name="exif_tag_focal_plane_resolution_unit">Focal Plane Resolution Unit</string>
    <string name="exif_tag_focal_plane_x_resolution">Focal Plane x Resolution</string>
    <string name="exif_tag_focal_plane_y_resolution">Focal Plane y Resolution</string>
</resources>