<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        style="@style/TextViewHeader"
        android:fragment="net.wetfish.wetfish.ui.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/pref_header_general" />

    <header
        style="@style/TextViewHeader"
        android:fragment="net.wetfish.wetfish.ui.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        style="@style/TextViewHeader"
        android:fragment="net.wetfish.wetfish.ui.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
